tests/invalid/MethodCall_Invalid_1.whiley
method f(int x) -> int:
    return 1

method main(&int this):
    f(this, 1)
